--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
             font-size: 50px;
         }
     </style>
+    <style>
+        #forecast-graph {
+            width: 100%;
+            height: 200px;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
     <header>  <!-- Added a header for the logo -->
@@ -252,6 +259,7 @@
                     <h3>5-Day Forecast</h3>
                 </div>
                 <div id="extended-forecast-container" class="card-content forecast-container"></div>
+                <div id="forecast-graph"></div>
             </div>
         </div>
     </div>
@@ -318,7 +326,7 @@
             <hr>
             <div class="row">
                 <div class="col-md-6">
-                    <p>&copy; 2025. All rights reserved.</p>
+                    <p>© 2025. All rights reserved.</p>
                 </div>
                 <div class="col-md-6 text-end">
                     <ul class="list-inline footer-links">
@@ -443,3 +451,5 @@
     </script>
 </body>
 </html>
+
+                
