--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                     <h3>5-Day Forecast</h3>
                 </div>
                 <div id="extended-forecast-container" class="card-content forecast-container"></div>
-                <div id="forecast-graph"></div>
+                <div id="forecast-graph">adsssdd</div>
             </div>
         </div>
     </div>
