--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <div class="search-box">
             <input type="text" id="city-input" placeholder="Enter city name">
             <button id="search-btn">Search</button>
-            <button id="export-btn"><i class="fas fa-file-export"></i> Export to Word</button>
+            <button id="export-btn"><i class="fas fa-file-export"></i> Export to json</button>
         </div>
         
         <div class="weather-cards">
