--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Advanced Weather Forecast Dashboard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
-    
+    <script src="https://d3js.org/d3.v7.min.js"></script>
     <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <link href=
@@ -311,7 +311,50 @@
                 </div>
                 <div id="extended-forecast-container" class="card-content forecast-container"></div>
                 <div id="line-graph-container">
-                    <svg id="line-graph-svg"></svg>
+                    <svg id="line-graph-svg" width="500" height="300">
+        <script>
+            const data = [
+                { day: "Day 1", temp: Math.random() * 40 },
+                { day: "Day 2", temp: Math.random() * 40 },
+                { day: "Day 3", temp: Math.random() * 40 },
+                { day: "Day 4", temp: Math.random() * 40 },
+                { day: "Day 5", temp: Math.random() * 40 }
+            ];
+
+            const svg = d3.select("#line-graph-svg"),
+                  width = +svg.attr("width"),
+                  height = +svg.attr("height"),
+                  margin = { top: 20, right: 30, bottom: 50, left: 50 };
+
+            const xScale = d3.scalePoint()
+                .domain(data.map(d => d.day))
+                .range([margin.left, width - margin.right]);
+
+            const yScale = d3.scaleLinear()
+                .domain([0, 40])
+                .range([height - margin.bottom, margin.top]);
+
+            const line = d3.line()
+                .x(d => xScale(d.day))
+                .y(d => yScale(d.temp))
+                .curve(d3.curveMonotoneX);
+
+            svg.append("g")
+                .attr("transform", `translate(0,${height - margin.bottom})`)
+                .call(d3.axisBottom(xScale));
+
+            svg.append("g")
+                .attr("transform", `translate(${margin.left},0)`)
+                .call(d3.axisLeft(yScale));
+
+            svg.append("path")
+                .datum(data)
+                .attr("fill", "none")
+                .attr("stroke", "blue")
+                .attr("stroke-width", 2)
+                .attr("d", line);
+        </script>
+    </svg>
                 </div>
             </div>
         </div>
