--- a/index.html
+++ b/index.html
@@ -345,12 +345,13 @@
             </div>
         </div>
     </div>
+    <div class="weather-container">
      <button onclick="analyze()">Analyze</button>
-    <p id="output"></p>
+    <p id="output"></p></div>
 
     <script>
         function analyze() {
-            document.getElementById("output").innerText = "Analysis complete: Your data has been processed successfully!";
+            document.getElementById("output").innerText = "Analysis complete: The weather seems great today—perfect for spending some time outdoors! With clear skies and a pleasant breeze, it's a good idea to carry a pair of sunglasses to protect your eyes from the sun. A light jacket might be handy in case it gets breezy later. Don’t forget to stay hydrated, so bring along a water bottle. If you’re planning to be out for a while, some sunscreen can help protect your skin. And, of course, a hat or cap would be a great addition to keep the sun off your face. Enjoy the beautiful day!";
         }
     </script>
     <!-- India Weather Map Container -->
