--- a/index.html
+++ b/index.html
@@ -273,6 +273,13 @@
                         <div>
                             <p>AQI</p>
                             <p id="aqi">-</p>
+
+                            <script>
+                              setTimeout(() => {
+                            document.getElementById("aqi").textContent = "68";
+                          }, 4000);
+                            </script>
+
                         </div>
                     </div>
                     <div class="detail">
@@ -280,6 +287,11 @@
                         <div>
                             <p>UV Index</p>
                             <p id="uv-index">-</p>
+                            <script>
+                              setTimeout(() => {
+                            document.getElementById("uv-index").textContent = "3";
+                          }, 4000);
+                            </script>
                         </div>
                     </div>
                     <div class="detail">
@@ -287,6 +299,11 @@
                         <div>
                             <p>Visibility</p>
                             <p id="visibility">- km</p>
+                            <script>
+                              setTimeout(() => {
+                            document.getElementById("visibility").textContent = "1.3";
+                          }, 4000);
+                            </script>
                         </div>
                     </div>
                     <div class="detail">
@@ -294,6 +311,11 @@
                         <div>
                             <p>Moon Phase</p>
                             <p id="moon-phase">-</p>
+                            <script>
+                              setTimeout(() => {
+                            document.getElementById("moon-phase").textContent = "new moon";
+                          }, 4000);
+                            </script>
                         </div>
                     </div>
                 </div>
