--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                         <i class="fas fa-radiation"></i>
                         <div>
                             <p>AQI</p>
-                            <p id="aqi">-</p>
+                            <p id="aqi">68</p>
 
                             <script>
                               setTimeout(() => {
@@ -286,7 +286,7 @@
                         <i class="fas fa-sun"></i>
                         <div>
                             <p>UV Index</p>
-                            <p id="uv-index">-</p>
+                            <p id="uv-index">3</p>
                             <script>
                               setTimeout(() => {
                             document.getElementById("uv-index").textContent = "3";
@@ -298,7 +298,7 @@
                         <i class="fas fa-eye"></i>
                         <div>
                             <p>Visibility</p>
-                            <p id="visibility">- km</p>
+                            <p id="visibility">1.3 km</p>
                             <script>
                               setTimeout(() => {
                             document.getElementById("visibility").textContent = "1.3";
@@ -310,7 +310,7 @@
                         <i class="fas fa-moon"></i>
                         <div>
                             <p>Moon Phase</p>
-                            <p id="moon-phase">-</p>
+                            <p id="moon-phase">new moon</p>
                             <script>
                               setTimeout(() => {
                             document.getElementById("moon-phase").textContent = "new moon";
